# excel-import-app

./: .gitignore  Dockerfile  Makefile  Procfile  README.md  Vagrantfile  manage.py  pyproject.toml  requirements.txt  setup.cfg
BauerDude/: admin.py  application.py  asgi.py  urls.py  wsgi.py
BauerDude/apps/products/: admin.py  apps.py  urls.py  views.py
BauerDude/apps/products/migrations/: 0001_initial.py  0002_auto_20210206_1714.py
BauerDude/apps/products/models/: models.py  serializers.py
BauerDude/apps/products/templates/products/: overview.html  products_changelist.html
BauerDude/apps/tokens/: serializers.py  views.py
BauerDude/apps/users/migrations/: 0001_initial.py  0002_default.py
BauerDude/apps/users/models/: models.py  serializers.py
BauerDude/docs/: openapi.py  settings.py
BauerDude/lib/errors/: exc.py
BauerDude/settings/: development.py  production.py
BauerDude/templates/registration/: login.html
docker/: docker-compose.srv.yml  docker-compose.yml  docker-entrypoint.sh
kubernetes/: deployment.yml  service.yml
kubernetes/postgres/: config.yml  deployment.yml  service.yml
server/: uwsgi.ini
service/: Chart.yaml  values.yaml
service/charts/postgres/: Chart.yaml
service/charts/postgres/templates/: config.yml  service.yml
service/templates/: deployment.yml  service.yml
tests/: conftest.py
tests/inbuilts/: test_tokens.py
